--- a/src/styles/Footer.scss
+++ b/src/styles/Footer.scss
@@ -1,7 +1,7 @@
 .footer {
-    background-color: #ff8635;
+    background-color: #35aeff;
     color: #fff;
-    padding: 0 20px;
+    padding: 0px 20px;
     position: fixed;
     bottom: 0;
     left: 0;
