--- a/src/styles/Product.scss
+++ b/src/styles/Product.scss
@@ -9,11 +9,12 @@
 
     img {
         max-width: 100%;
-        max-height: 300px;
+        max-height: 180px;
     }
 
     button {
-        background-color: #ff6600;
+        border-radius: 5px;
+        background-color: rgb(39, 190, 254);
         color: white;
         border: none;
         padding: 5px 10px;
