--- a/src/styles/Cart.scss
+++ b/src/styles/Cart.scss
@@ -1,37 +1,52 @@
-.cart-item {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 10px;
-    align-items: flex-start;
-    justify-content: space-evenly;
-    list-style: none;
-    margin-top: 5%;
+.body {
+    margin-bottom: 40px;
 
-    img {
-        max-width: 100%;
-        max-height: 300px;
+    .cart-item {
+        display: flex;
+        flex-wrap: wrap;
+        gap: 10px;
+        align-items: flex-start;
+        justify-content: space-evenly;
+        list-style: none;
+        margin-top: 5%;
+        flex-grow: 1;
+
+        img {
+            max-width: 100%;
+            max-height: 300px;
+        }
+
+        button {
+            border-radius: 5px;
+            background-color: red;
+            color: white;
+            border: none;
+            padding: 5px 10px;
+            cursor: pointer;
+            transition: background-color 0.3s, transform 0.2s;
+
+            &:hover {
+                background-color: rgb(187, 1, 1);
+            }
+        }
     }
 
-    button {
+    .paybtn {
         border-radius: 5px;
-        background-color: red;
-        color: white;
+        background-color: #008cff;
+        color: #fff;
         border: none;
-        padding: 5px 10px;
+        padding: 10px 20px;
         cursor: pointer;
-    }
-}
+        position: relative;
+        margin-top: 60px;
+        left: 50%;
+        transform: translateX(-166%);
+        width: 30%;
+        transition: background-color 0.3s, transform 0.2s;
 
-.paybtn {
-    border-radius: 5px;
-    background-color: #008cff;
-    color: #fff;
-    border: none;
-    padding: 10px 20px;
-    cursor: pointer;
-    position: absolute;
-    bottom: 10%;
-    left: 50%;
-    transform: translateX(-50%);
-    width: 30%;
+        &:hover {
+            background-color: rgb(16, 184, 170);
+        }
+    }
 }
