--- a/src/styles/Footer.scss
+++ b/src/styles/Footer.scss
@@ -1,8 +1,8 @@
 .footer {
     background-color: #35aeff;
     color: #fff;
-    padding: 0px 20px;
-    position: fixed;
+    padding: 10px 20px;
+    position: relative;
     bottom: 0;
     left: 0;
     width: 100%;
