--- a/src/styles/Product.scss
+++ b/src/styles/Product.scss
@@ -1,23 +1,39 @@
-.product-item {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 10px;
-    align-items: flex-start;
-    justify-content: space-evenly;
-    list-style: none;
-    margin-top: 5%;
+.body {
+    margin-bottom: 40px;
 
-    img {
-        max-width: 100%;
-        max-height: 180px;
-    }
+    .product-item {
+        display: flex;
+        flex-wrap: wrap;
+        gap: 10px;
+        align-items: flex-start;
+        justify-content: space-evenly;
+        list-style: none;
+        margin-top: 5%;
 
-    button {
-        border-radius: 5px;
-        background-color: rgb(39, 190, 254);
-        color: white;
-        border: none;
-        padding: 5px 10px;
-        cursor: pointer;
+        img {
+            max-width: 100%;
+            max-height: 180px;
+            transition: background-color 0.3s, transform 0.2s;
+
+            &:hover {
+                transform: scale(1.1);
+            }
+        }
+
+        button {
+            border-radius: 5px;
+            background-color: rgb(39, 190, 254);
+            color: white;
+            border: none;
+            padding: 5px 10px;
+            cursor: pointer;
+            transition: background-color 0.3s, transform 0.2s;
+
+            &:hover {
+                background-color: #2980b9;
+                transform: scale(1.05);
+            }
+        }
+
     }
 }
