fix update profile bug detail

--- a/src/styles/Profile.scss
+++ b/src/styles/Profile.scss
@@ -61,7 +61,7 @@
         }
 
         .email,
-        .Date_of_birth,
+        .date_of_birth,
         .phone,
         .address {
             color: #777;
@@ -136,7 +136,7 @@
         }
 
         .email,
-        .Date_of_birth,
+        .date_of_birth,
         .phone,
         .address {
             margin-top: 20px;
