--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,3 +1,10 @@
 .App {
   text-align: center;
+
+  .search {
+    height: 50px;
+    background-color: rgb(0, 203, 243);
+    border-color: #ebccd1;
+    color: #a94442;
+  }
 }
