--- a/src/styles/Nav.scss
+++ b/src/styles/Nav.scss
@@ -1,33 +1,30 @@
-/* Add a black background color to the top navigation */
 .topnav {
-    background-color: rgb(16, 183, 216);
+    background-color: rgb(0, 203, 243);
     overflow: hidden;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    padding: 10px;
 }
 
-/* Style the links inside the navigation bar */
 .topnav a {
-    float: left;
     color: #f2f2f2;
     text-align: center;
-    padding: 14px 16px;
+    padding: 10px 160px;
     text-decoration: none;
-    font-size: 17px;
+    font-size: 16px;
+    transition: background-color 0.3s, color 0.3s;
 }
 
-/* Change the color of links on hover */
 .topnav a:hover {
     background-color: #3ec2fb;
     color: rgb(0, 0, 0);
 }
 
-/* Add a color to the active/current link */
-.topnav a.active {
-    background-color: rgb(4, 152, 211);
-    color: white;
-}
+// .topnav a.active {
+//     background-color: rgb(4, 152, 211);
+//     color: white;
+// }
 
 .topnav .logout {
     margin-right: 20px;
@@ -45,7 +42,6 @@
         overflow: hidden;
         margin-left: 10px;
         margin-right: 15px;
-        /* Đặt khoảng cách giữa avata và tên người dùng */
 
         img {
             width: 100%;
@@ -62,9 +58,6 @@
         p {
             margin: 5px 0;
             color: white;
-            /* Đặt màu chữ thành màu trắng */
         }
     }
 }
-
-/* Rest of your existing code */
