--- a/src/styles/Profile.scss
+++ b/src/styles/Profile.scss
@@ -1,171 +1,213 @@
-.body {
-    margin-bottom: 40px;
+.profile-container {
+    text-align: center;
+    margin-bottom: 10%;
 
-    .profile-container {
-        text-align: center;
+    .profile-item {
+        display: flex;
+        border: 1px solid #ddd;
+        padding: 20px;
+        margin: 20px auto;
+        /* Sửa đường margin: 20px; thành margin: 20px auto; */
+        width: 800px;
+        height: 400px;
+        border-radius: 10px;
+        background-color: #fff;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 
-        .profile-item {
+        .box-left {
+            margin-top: 30px;
+            flex: 40%;
+            padding-right: 20px;
+        }
+
+        .box-right {
+            margin-top: 50px;
+            margin-bottom: 80px;
+            flex: 60%;
             display: flex;
-            border: 1px solid #ddd;
-            padding: 20px;
-            margin: 20px auto;
-            /* Sửa đường margin: 20px; thành margin: 20px auto; */
-            width: 800px;
-            height: 400px;
-            border-radius: 10px;
-            background-color: #fff;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            flex-direction: column;
+            justify-content: space-between;
 
-            .box-left {
-                margin-top: 30px;
-                flex: 40%;
-                padding-right: 20px;
+            button {
+                width: auto;
+                margin-left: 75%;
+                transform: translateX(-149%);
             }
-
-            .box-right {
-                margin-top: 50px;
-                margin-bottom: 80px;
-                flex: 60%;
-                display: flex;
-                flex-direction: column;
-                justify-content: space-between;
-
-                button {
-                    width: auto;
-                    margin-left: 75%;
-                    transform: translateX(-149%);
-                }
-            }
-
         }
 
-        .avata img {
-            width: 200px;
-            height: 200px;
-            border-radius: 50%;
-            margin-bottom: 10px;
-        }
+    }
 
-        .username {
-            font-size: 1.5em;
-            font-weight: bold;
-            color: #333;
-            margin-bottom: 10px;
-        }
+    .avata img {
+        width: 200px;
+        height: 200px;
+        border-radius: 50%;
+        margin-bottom: 10px;
+    }
 
-        span {
-            margin-left: 70px;
-            color: #777;
-            margin-bottom: 10px;
-            display: flex;
-        }
+    .username {
+        font-size: 1.5em;
+        font-weight: bold;
+        color: #333;
+        margin-bottom: 10px;
+    }
 
-        .email,
-        .date_of_birth,
-        .phone,
-        .address {
-            color: #777;
-            margin-bottom: 10px;
-            display: flex;
-            overflow: hidden;
-            text-overflow: ellipsis;
-        }
+    span {
+        margin-left: 70px;
+        color: #777;
+        margin-bottom: 10px;
+        display: flex;
+    }
+
+    .email,
+    .date_of_birth,
+    .phone {
+        color: #777;
+        margin-bottom: 10px;
+        display: flex;
+        overflow: hidden;
+        text-overflow: ellipsis;
+    }
+
+    .address {
+        max-width: 300px;
+        color: #777;
+        margin-bottom: 10px;
+        display: flex;
+        overflow: hidden;
+        text-overflow: ellipsis;
+    }
 
 
 
 
-        button {
-            background-color: #f44336;
-            color: #fff;
-            padding: 10px 20px;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            transition: background-color 0.3s;
-        }
+    button {
+        background-color: #f44336;
+        color: #fff;
+        padding: 10px 20px;
+        border: none;
+        border-radius: 5px;
+        cursor: pointer;
+        transition: background-color 0.3s;
+    }
 
-        button:hover {
-            background-color: #d32f2f;
-        }
+    button:hover {
+        background-color: #d32f2f;
     }
 }
 
-.body {
+.profileEdit-container {
+    text-align: center;
     margin-bottom: 40px;
 
-    .profileEdit-container {
+    .profile-item {
+        border: 1px solid #ddd;
+        padding: 20px;
+        margin: 20px auto;
+        max-width: 400px;
+        border-radius: 10px;
+        background-color: #fff;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    }
+
+    .avata img {
+        width: 200px;
+        height: 200px;
+        border-radius: 50%;
+        margin-bottom: 10px;
+    }
+
+    .username {
+        font-size: 1.5em;
+        font-weight: bold;
+        color: #333;
+        margin-bottom: 10px;
+    }
+
+    .btn-upload-file {
+        background-color: #4caf50;
+        color: white;
+        padding: 10px 15px;
+        border: none;
+        border-radius: 5px;
+        cursor: pointer;
+        transition: background-color 0.3s;
+        margin-top: 10px;
+    }
+
+    .btn-upload-file:hover {
+        background-color: #45a049;
+    }
+
+    .email,
+    .date_of_birth,
+    .phone,
+    .address {
+        margin-top: 20px;
+        color: #777;
+        margin-bottom: 10px;
+    }
+
+    input {
+        width: 100%;
+        padding: 12px;
+        box-sizing: border-box;
+        border: 1px solid #ddd;
+        border-radius: 4px;
+        margin-bottom: 10px;
+        font-size: 14px;
+    }
+
+    button {
+        background-color: #f44336;
+        color: #fff;
+        padding: 10px 20px;
+        border: none;
+        border-radius: 5px;
+        cursor: pointer;
+        transition: background-color 0.3s;
+    }
+
+    button:hover {
+        background-color: #d32f2f;
+    }
+}
+
+.ProductDetail-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+
+    >div {
+        padding: 20px;
+        margin: 10px;
         text-align: center;
 
-        .profile-item {
-            border: 1px solid #ddd;
-            padding: 20px;
-            margin: 20px auto;
-            max-width: 400px;
-            border-radius: 10px;
-            background-color: #fff;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        img {
+            max-width: 100%;
+            max-height: 300px;
         }
 
-        .avata img {
-            width: 200px;
-            height: 200px;
-            border-radius: 50%;
-            margin-bottom: 10px;
+        h4 {
+            margin: 10px 0;
         }
 
-        .username {
-            font-size: 1.5em;
-            font-weight: bold;
-            color: #333;
-            margin-bottom: 10px;
-        }
-
-        .btn-upload-file {
-            background-color: #4caf50;
-            color: white;
-            padding: 10px 15px;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            transition: background-color 0.3s;
-            margin-top: 10px;
-        }
-
-        .btn-upload-file:hover {
-            background-color: #45a049;
-        }
-
-        .email,
-        .date_of_birth,
-        .phone,
-        .address {
-            margin-top: 20px;
-            color: #777;
-            margin-bottom: 10px;
-        }
-
-        input {
-            width: 100%;
-            padding: 12px;
-            box-sizing: border-box;
-            border: 1px solid #ddd;
-            border-radius: 4px;
-            margin-bottom: 10px;
-            font-size: 14px;
+        p {
+            margin: 5px 0;
         }
 
         button {
-            background-color: #f44336;
-            color: #fff;
+            background-color: #4CAF50;
+            color: white;
             padding: 10px 20px;
             border: none;
             border-radius: 5px;
             cursor: pointer;
-            transition: background-color 0.3s;
-        }
+            font-size: 16px;
 
-        button:hover {
-            background-color: #d32f2f;
+            &:hover {
+                background-color: #45a049;
+            }
         }
     }
 }
