--- a/src/styles/Search.scss
+++ b/src/styles/Search.scss
@@ -1,8 +1,67 @@
+/* Styles for the Search-By-Price component */
 .Search-By-Price {
-    margin-top: 20px;
+    max-width: 460px;
+    margin-top: -35px;
+    margin-left: 55%;
+
+    input {
+        width: 100%;
+        padding: 8px;
+        box-sizing: border-box;
+        border: 1px solid #ccc;
+        border-radius: 5px;
+        font-size: 14px;
+    }
 
     .max {
-        margin-left: 5px;
-        margin-right: 5px;
+        max-width: 165px;
+        margin-left: 24px;
+        margin-right: 24px;
+    }
+
+    .mim {
+        max-width: 165px;
+    }
+
+    button {
+        background-color: rgb(71, 250, 175);
+        color: #646363;
+        padding: 9px 20px;
+        border: none;
+        border-radius: 5px;
+        cursor: pointer;
+        transition: background-color 0.3s;
+    }
+}
+
+/* Styles for the search-by-name component */
+.search-by-name {
+    margin-left: 33%;
+    margin-top: -45px;
+    max-width: 320px;
+
+    input {
+        width: 100%;
+        padding: 8px;
+        box-sizing: border-box;
+        border: 1px solid #ccc;
+        border-radius: 5px;
+        font-size: 14px;
+    }
+}
+
+/* Styles for the search-by-type component */
+.search-by-type {
+    margin-left: 18%;
+    max-width: 210px;
+
+    select {
+        width: 100%;
+        padding: 8px;
+        box-sizing: border-box;
+        border: 1px solid #ccc;
+        border-radius: 5px;
+        font-size: 14px;
+        margin-bottom: 10px;
     }
 }
